# full-stack-assignment

backend/: pyproject.toml
backend/backend/: __init__.py
frontend/: package.json  pnpm-lock.yaml
frontend/app/profile/: page.tsx
