[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Panagiotis Chatzigiannis <pchatzijohn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
requests = "^2.32.3"
flask-cors = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
